# HU_GalaxyPackage

./: .dropboxignore  .gitignore  AI_tools.ipynb  CMakeLists.txt  ChatIdeas  CleanPythonSetup.sh  Dockerfile  HU_Galaxy_Notebook.ipynb  MANIFEST.in  README.md  Untitled.ipynb  __init__.py  activate  build_wheels.sh  build_wheels_in_manylinux.sh  changename.sh  cleanup.sh  comparelibraries.py  createActivateScripts.sh  deletestuff.sh  docker-compose.yml  docker-composeBuild.yml  docker-composeBuildFromImage.yml  environment.yml  exportStuff.sh  libTorchSpiralGalaxy.py  pypiTest.txt  pyproject.toml  req.txt  requirements.txt  rerun.sh  setEnv.sh  setup.py  setupa.py  setupnew.py  setupold.py  start.sh  testwrapper.py  updatePKG_Config.sh  uploadTestPypi.sh  (+2 more)
.ipynb_checkpoints/: AI_tools-checkpoint.ipynb  HU_Galaxy_Notebook-checkpoint.ipynb  Untitled-checkpoint.ipynb  gpt_engineer_HUGalaxy-checkpoint.ipynb
CMakeListsFolder/: CMakeListsCUDA.txt  CMakeListsGCC.txt  CMakeListsLib.txt  CMakeListsMainProgSharedLibraryNonCUDA.txt  CMakeListsProg.txt  CMakeListsProgNonCuda.txt
CMakeListsFolder/PriorVersions/: GalaxyFormationCUDA.h  lib0.cu  libCPU.cu  main_1.cu  main_2.cu
CMakeListsFolder/PriorVersions/src/: Galaxy.cpp
ChatGPT_Paper/: PaperOutline
GalaxyProgram/: CMakeLists.txt  CMakeListssaved.txt
GalaxyProgram/include/: Galaxy.h
GalaxyProgram/src/: Galaxy.cpp  GalaxyApp.cpp
HU_Galaxy/: CMakeLists.txt  CMakeListsOld.txt  DrudePropagator.cpp  Galaxy.cpp  Galaxy.h  Galaxy.py  GalaxyWrapper.cpp  HU_Galaxy.cpp  HU_Galaxy.h  __init__.py  forCentos.cmake  forUbuntu.cmake  setup.py  tensor_utils.h  testwrapper.py
HU_Galaxy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
HU_Galaxy/cmake/: FindGALAXY_LIB.cmake  FindNumPy.cmake
HU_Galaxy/include/: Galaxy.h  HU_Galaxy_PyBind11.h
HU_Galaxy/src/: GalaxyPyPackage.cpp  GalaxyWrapper.cpp  HU_Galaxy_PyBind11.cpp
HU_Galaxy/tests/: test_galaxy.py
LibGalaxy/: CMakeLists.txt
LibGalaxy/include/: Galaxy.h  lib0.h
LibGalaxy/src/: Galaxy.cpp  lib0.cpp
LibGalaxyClass/: CMakeLists.txt
LibGalaxyClass/include/: Galaxy.h
LibGalaxyClass/src/: Galaxy.cpp
ManyLinux/: Dockerfile  build.sh  build_wheels.sh
MoveMeOut/CMakeListsFolder/: CMakeLists_NonCUDA_Library.txt
MoveMeOut/CMakeListsFolder/PriorVersions/: CMakeLists.txt  lib0.cu  libCPU.cu  libCUDA.cu  mainSaveMe.cu  main_1.cu  main_2.cu  mainold.cu
MoveMeOut/CMakeListsFolder/Working/: BestSingleProg.txt  CMakeLists_CUDA_LIB.txt
MoveMeOut/ChatGPT_Paper/: ChatGPT_1
PriorVersions/: mainSaveMe.cu  mainToy.cu  main_1.cu  mainold.cu
PriorVersions/include/: lib0.h
PriorVersions/src/: lib0.cpp
cmake/: FindGALAXY_LIB.cmake  FindNLopt.cmake  Findpybind11.cmake
conda.recipe/: meta.yaml
deleteme/: CleanPythonSetup.sh  CreateAuditedWheels.py  CreateAuditedWheels.sh  CreateAuditedWheelsOld.sh  CreateCentosContainer.sh  CreateCondaEnvs.sh  RunCmake.py  WHICH_INTERPRETER.PY.py  activate  createContainer1000.sh  createContainerZero.sh  deactivate  find_dir.sh  manylinux_translateit.sh  pipInstallOptPython.py  pyproject3131232.toml  runCmake.sh  setup3.py  startDockerEnv.sh  twineStuff.sh
deleteme/cmakeLists/: CMakeLists20230521.txt  CMakeListsCentosOS.txt  CMakeListsUbuntu.txt
hugalaxy/: CMakeLists.txt  Galaxy.cpp  Galaxy.h  HU_Galaxy.cpp  HU_Galaxy.h  HU_Galaxy_GalaxyWrapper.py  __init__.py  tensor_utils.h
hugalaxy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
include/: GalaxyFormationCUDA.h  lib0.hpp  libCUDA.cu
notebooks/: ExtractGalaxyFormationDuration.ipynb  HU_Galaxy_Density_Animation.ipynb  HU_Galaxy_Fitting_M33.ipynb  HU_Galaxy_Formation_Animation.ipynb  HU_Galaxy_Notebook.ipynb  HU_Universe_Probability_Distribution.ipynb  MemoizeInPython.ipynb  df.xlsx
notebooks/.ipynb_checkpoints/: HU_Galaxy_Density_Animation-checkpoint.ipynb  HU_Galaxy_Fitting_M33-Copy1-checkpoint.ipynb  HU_Galaxy_Fitting_M33-checkpoint.ipynb  HU_Galaxy_Notebook-checkpoint.ipynb
notebooks/ExtraStuff/.ipynb_checkpoints/: Blackholium-checkpoint.ipynb  ExtractGalaxyFormationDuration-checkpoint.ipynb  HU_Galaxy_Density_Animation-checkpoint.ipynb  HU_Galaxy_Fitting_M33-checkpoint.ipynb  HU_Galaxy_Formation_Animation_FreeFall-checkpoint.ipynb
notebooks/GalaxyFormationModeling/: ExtractGalaxyFormationDuration.ipynb  HU_Final_Galaxy_Fitting_M33.ipynb  HU_Galaxy_Density_Animation.ipynb  HU_Galaxy_Fitting_M33.ipynb  HU_Galaxy_Formation_Animation_FreeFall.ipynb  HU_Galaxy_Notebook.ipynb
notebooks/GalaxyFormationModeling/.ipynb_checkpoints/: HU_Final_Galaxy_Fitting_M33-checkpoint.ipynb  HU_Galaxy_Fitting_M33-checkpoint.ipynb  HU_Galaxy_Formation_Animation_FreeFall-checkpoint.ipynb  HU_Galaxy_Notebook-checkpoint.ipynb
notebooks/GalaxyFormationModeling/data/: _freefall_all_current_masses.npy  _freefall_all_current_masses_10.00786.npy  _freefall_all_current_masses_4.npy  _freefall_all_current_masses_5.npy  _freefall_all_dv0.npy  _freefall_all_dv0_10.00786.npy  _freefall_all_dv0_4.npy  _freefall_all_dv0_5.npy  (+7 more)
notebooks/TheOptical_4DPath_OfAncientPhotons/: Optical_Path_Of_Ancient_Photons.ipynb
notebooks/data/: _all_dv0.npy  _all_r.npy  _all_z.npy  _epochs.npy  _freefall_all_z.npy  _redshifts.npy  pd_dv0.pkl  pd_r.pkl  pd_z.pkl  redshifts.pkl
pyprojectPath/: benchmark.py  build.py  config.cfg  pyproject.toml  pyproject20230626.toml
python/: CMakeLists.txt
python/src/: GalaxyPyPackage.cpp
src/: lib0.cu  main.cu  maindeleteme.cu
src/hugalaxy/: CMakeLists.txt  Makefile  __init__.py  chatgpt  cnpy.cpp  cnpy.h  galaxy.cpp  galaxy.h  hugalaxy.cpp  hugalaxy.h  plotting.py  tensor_utils.cpp  tensor_utils.h
src/hugalaxy/calibration/: __init__.py  calibration.py
src/hugalaxy/plotting/: __init__.py  plotting.py
src/testCPP/: TestGalaxy.cpp
testCPP/: CMakeLists.txt  TestGalaxy.cpp  _old.cpp
testCPPLibrary/: CMakeLists.txt  TestGalaxy.cpp  testwrapper.py
tests/: CMakeLists.txt  TestGalaxy.cpp  testwrapper.py
testsPython/: __init__.py  testwrapper.py  testwrapper_1.py  testwrapper_2.py  testwrapper_3.py  testwrapper_5.py  testwrapper_6.py
testsPython/plotting/: plotting.py
(+21 files in other folders)
